# azure-keyvault-browser

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  LICENSE  Makefile  README.md  changelog.json  pyproject.toml
.github/workflows/: ci.yaml
dev/: .azure_keyvault_browser.toml  keyvault.tf  provider.tf  terraform.tfstate.backup
src/azure_keyvault_browser/: __init__.py  app.py  ask.py  azure.py  config.py  search.py  styles.py  util.py
src/azure_keyvault_browser/renderables/: __init__.py  help.py  paginated_table.py  secret_properties.py  secret_versions_table.py  secrets_table.py
src/azure_keyvault_browser/widgets/: __init__.py  filter.py  header.py  help.py  search.py  secret_properties.py  secret_versions.py  secrets.py
